--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=restaurante
+spring.datasource.url=jdbc:mysql://localhost:3306/restauranteApp_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.main.banner-mode=off
+
+
+#Habilitar api docs y swagger
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+# /swagger custom path
+springdoc.swagger-ui.path=/doc/swagger-ui.html
+# /api-docs endpoint custom path
+springdoc.api-docs.path=/api-docs
